[package]
name = "ld45_one_and_all"
version = "0.1.0"
authors = ["Stephen Seo <seo.disparate@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.3.19"
rand = "0.7.2"
serde = { version = "1.0.101", features = ["derive"] }
